# my-life-os

./: .env.example  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: supabase-db-push.yml
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/analytics/: page.tsx
components/: live-clock.tsx  theme-toggle.tsx
components/calendar/: heatmap-shared.ts  heatmap30.tsx  lifetime-heatmap.tsx  month-grid.tsx
components/charts/: bars.tsx  sparkline.tsx
components/quotes/: daily-quote-hero.tsx
components/shell/: app-shell.tsx  nav.ts  sidebar.tsx  topbar.tsx
components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
lib/data/: angular.ts  dsa.ts
lib/life/: dates.ts  defaultState.ts  engine.ts  heatmap.ts  identity.ts  migrations.ts  selectors.ts  stats.ts  types.ts  validate.ts
lib/quotes/: ATTRIBUTION.md  curated.json  pick.ts  quote-cycle.ts  quotes365.json  types.ts  use-daily-quote.ts
lib/storage/: idb.ts  storage.ts  tauri.ts
lib/store/: lifeStore.tsx  store.ts
lib/supabase/: backup.ts  client.ts  env.ts  middleware.ts  server.ts
lib/sync/: cloud.ts
scripts/: generate-quotes365.mjs  trigger-cron.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
supabase/: config.toml  seed.sql
(+18 files in other folders)
