[package]
name = "life_os"
version = "0.1.0"
description = "Offline-first Life OS"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

